  * enhancement: saving cores with foreign code loaded is now
    supported on ppc/Darwin in addition to the previously supported
    platforms.
  * enhancement: the statistical profiler now walks deeper into the 
    call stack for more meaningful call-graphs and accrued time
    reports (x86/x86-64 only). It also now reports time spent in
    foreign functions.
  * bug fix: invalid :DEFAULT-INITARGS are detected in compiled calls
    to MAKE-INSTANCE.
  * bug fix: defaulted initargs are passed to INITIALIZE-INSTANCE and
    SHARED-INITIALIZE methods from compiled calls to MAKE-INSTANCE.
  * bug fix: COERCE to (COMPLEX FLOAT) of a complex number no longer
    produces an error.  (thanks to Vincent Arkesteijn)
  * bug fix: NAMESTRING on pathnames with :WILD components in their
    directories works correctly.  (thanks to Artem V. Andreev)
  * fixed bug 125: compiler preserves identity of closures. (reported
    by Gabe Garza)
  * build fix: fixed the dependence on *LOAD-PATHNAME* and
    *COMPILE-FILE-PATHNAME* being absolute pathnames.
  * on x86 compiler partially supports stack allocation of dynamic-extent
    closures.
  * fixed some bugs related to Unicode integration:
    ** encoding and decoding errors are now much more robustly
       handled; it should now be possible to recover even from invalid
       input or output to the terminal.  (thanks to Teemu Kalvas)
    ** provided a first cut at implementing STRING-TO-OCTETS and
       OCTETS-TO-STRING.  (thanks to Robert J. Macomber)
    ** altered the SB-MD5 contributed module slightly, changing the
       interface just enough for it to be supportable for builds where
       lisp characters are not eight bits.
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** the FORMATTER-generated functions for ~V[ conditionals require
       the correct number of arguments.

changes in sbcl-0.8.18 relative to sbcl-0.8.17:
  * new feature: reloading changed shared object files with